# VulraySamples

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Readme.md
Assets/: cornell_box.glb  monkey.glb  room.glb  spheres.glb
Base/: Application.cpp  Application.h  Camera.cpp  Camera.h  Common.h  FileRead.h  GLTFTypes.h  GPUMaterial.h  Helpers.h  MeshLoader.cpp  MeshLoader.h  ShaderCompiler.cpp  ShaderCompiler.h  SimpleTimer.cpp  SimpleTimer.h
Samples/BoxIntersections/: BoxIntersections.cpp  CMakeLists.txt
Samples/Callable/: CMakeLists.txt  Callable.cpp
Samples/Compaction/: CMakeLists.txt  Compaction.cpp
Samples/DynamicBLAS/: CMakeLists.txt  DynamicBLAS.cpp
Samples/DynamicTLAS/: CMakeLists.txt  DynamicTLAS.cpp
Samples/GaussianBlurDenoising/: CMakeLists.txt  GaussianBlurDenoising.cpp
Samples/HelloTriangle/: CMakeLists.txt  Explanation.md  HelloTriangle.cpp
Samples/MeshMaterials/: CMakeLists.txt  MeshMaterials.cpp
Samples/MultipleGeometries/: CMakeLists.txt  MultipleGeometries.cpp
Samples/SBTData/: CMakeLists.txt  SBTData.cpp
Samples/Shading/: CMakeLists.txt  Shading.cpp
Shaders/: HelloTriangle.rchit  HelloTriangle.rgen
Shaders/Callable/: Callable.hlsl
Shaders/ColorfulGeometry/: ColorfulGeometry.hlsl
Shaders/ColorfulTriangle/: ColorfulTriangle.hlsl  ColorfulTriangle.rgen.glsl  ColorfulTriangle.rmiss.glsl
Shaders/Common/: Camera.hlsl  Functions.hlsl  Material.hlsl  Random.hlsl  Ray.hlsl  Sampling.hlsl  Utils.glsl
Shaders/CustomIntersection/: RaytracedBoxes.hlsl
Shaders/MultipleGeometriesBLAS/: BLASShading.hlsl
Shaders/SBTShader/: SBTShader.hlsl
Shaders/Shading/: Shading.hlsl
